String_methods.js

--- a/Shapes.html/Shapees.html
+++ b/Shapes.html/Shapees.html
@@ -15,8 +15,15 @@
     background:red;
 }
 .edge {
-    rotate:90dge;
+    rotate:110dge;
     position:absolute;
+    top:0px;
+
+}
+.edge{
+    rotate:140deg;
+    position:absolute;
+    top:0px;
 }
 </style>
 </head>
