--- a/Shapes.html/Shapees.html
+++ b/Shapes.html/Shapees.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</style>
-.container {
-    margin:20px;
-    position:relative;
-}
-.Square {
-    width:140px;
-    height:100px:
-    background:red;
-}
-.edge {
-    rotate:110dge;
-    position:absolute;
-    top:0px;
-
-}
-.edge{
-    rotate:140deg;
-    position:absolute;
-    top:0px;
-}
-</style>
+<link rel="stylesheet" href="f.css">
 </head>
 <body>
     <div class="container"></div>
